remove correlated columns
Removal of the correlated columns and save the final set of features as in a new file for predictive analysis

--- a/predicting_customer_behaviour.ipynb
+++ b/predicting_customer_behaviour.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "predicting-customer-behaviour.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -611,7 +612,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 553
+          "height": 450
         },
         "id": "U2EMn8vAXL-N",
         "outputId": "953ff968-26fa-45b4-c1b9-88e4723432f5"
@@ -700,7 +701,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 640
+          "height": 515
         },
         "id": "a0pKlM9Yz6ud",
         "outputId": "6525ec66-0aa8-43bb-9835-85c9b26d03f4"
@@ -753,7 +754,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 800
+          "height": 643
         },
         "id": "Y2QkrTqrz5Io",
         "outputId": "9e9d8bbe-ebd1-4978-fec2-0a454252735d"
@@ -1125,7 +1126,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 556
+          "height": 449
         },
         "id": "vD_FdtID_Yie",
         "outputId": "6ab4180a-b656-4b28-d82f-e4c1ab3fe6cf"
@@ -1165,7 +1166,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 556
+          "height": 449
         },
         "id": "NfcJyU6y_YpP",
         "outputId": "917ac69a-07be-4ea5-d5ce-4f1752cae8ed"
@@ -1633,9 +1634,21 @@
         "id": "PbqF8AD7CqhM"
       },
       "source": [
-        ""
+        "savings_screens = ['Saving1',\n",
+        "                  'Saving2',\n",
+        "                  'Saving2Amount',\n",
+        "                  'Saving4',\n",
+        "                  'Saving5',\n",
+        "                  'Saving6',\n",
+        "                  'Saving7',\n",
+        "                  'Saving8',\n",
+        "                  'Saving9',\n",
+        "                  'Saving10']\n",
+        "\n",
+        "dataset['SavingsCount'] = dataset[savings_screens].sum(axis=1)\n",
+        "dataset.drop(savings_screens, axis=1, inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1644,9 +1657,16 @@
         "id": "dDNEGsSzHKaD"
       },
       "source": [
-        ""
+        "cm_screens = ['Credit1',\n",
+        "              'Credit2',\n",
+        "              'Credit3',\n",
+        "              'Credit3Container',\n",
+        "              'Credit3Dashboard']\n",
+        "\n",
+        "dataset[\"CMCount\"] = dataset[cm_screens].sum(axis=1)\n",
+        "dataset.drop(cm_screens, axis=1, inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1655,10 +1675,54 @@
         "id": "cIMpxaYKHKei"
       },
       "source": [
-        ""
+        "cc_screens = ['CC1',\n",
+        "              'CC1Category',\n",
+        "              'CC3']\n",
+        "  \n",
+        "dataset['CCCount'] = dataset[cc_screens].sum(axis=1)\n",
+        "dataset = dataset.drop(columns=cc_screens)"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fqX7Q3dMMHhj",
+        "outputId": "72147732-b1d9-4a90-88ca-9205d3a9212b"
+      },
+      "source": [
+        "dataset.columns"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['user', 'dayofweek', 'hour', 'age', 'screen_list', 'numscreens',\n",
+              "       'minigame', 'used_premium_feature', 'enrolled', 'liked', 'Loan2',\n",
+              "       'location', 'Institutions', 'VerifyPhone', 'BankVerification',\n",
+              "       'VerifyDateOfBirth', 'ProfilePage', 'VerifyCountry', 'Cycle',\n",
+              "       'idscreen', 'Loan3', 'Splash', 'Loan', 'RewardsContainer',\n",
+              "       'EditProfile', 'Finances', 'Alerts', 'Leaderboard', 'VerifyMobile',\n",
+              "       'VerifyHousing', 'RewardDetail', 'VerifyHousingAmount',\n",
+              "       'ProfileMaritalStatus', 'ProfileChildren ', 'ProfileEducation',\n",
+              "       'ProfileEducationMajor', 'Rewards', 'AccountView', 'VerifyAnnualIncome',\n",
+              "       'VerifyIncomeType', 'ProfileJobTitle', 'Login',\n",
+              "       'ProfileEmploymentLength', 'WebView', 'SecurityModal', 'Loan4',\n",
+              "       'ResendToken', 'TransactionList', 'NetworkFailure', 'ListPicker',\n",
+              "       'SavingsCount', 'CMCount', 'CCCount'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1666,9 +1730,15 @@
         "id": "QfcsvViyHKjD"
       },
       "source": [
-        ""
+        "loan_screens = ['Loan',\n",
+        "                'Loan2',\n",
+        "                'Loan3',\n",
+        "                'Loan4']\n",
+        "\n",
+        "dataset['LoansCount'] = dataset[loan_screens].sum(axis=1)\n",
+        "dataset.drop(loan_screens, axis=1, inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1685,7 +1755,67 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HKimZW1WHKra"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HKimZW1WHKra",
+        "outputId": "44dfaf4d-7fde-4a87-8b88-fb80d7617f6e"
+      },
+      "source": [
+        "dataset.columns"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['user', 'dayofweek', 'hour', 'age', 'screen_list', 'numscreens',\n",
+              "       'minigame', 'used_premium_feature', 'enrolled', 'liked', 'location',\n",
+              "       'Institutions', 'VerifyPhone', 'BankVerification', 'VerifyDateOfBirth',\n",
+              "       'ProfilePage', 'VerifyCountry', 'Cycle', 'idscreen', 'Splash',\n",
+              "       'RewardsContainer', 'EditProfile', 'Finances', 'Alerts', 'Leaderboard',\n",
+              "       'VerifyMobile', 'VerifyHousing', 'RewardDetail', 'VerifyHousingAmount',\n",
+              "       'ProfileMaritalStatus', 'ProfileChildren ', 'ProfileEducation',\n",
+              "       'ProfileEducationMajor', 'Rewards', 'AccountView', 'VerifyAnnualIncome',\n",
+              "       'VerifyIncomeType', 'ProfileJobTitle', 'Login',\n",
+              "       'ProfileEmploymentLength', 'WebView', 'SecurityModal', 'ResendToken',\n",
+              "       'TransactionList', 'NetworkFailure', 'ListPicker', 'SavingsCount',\n",
+              "       'CMCount', 'CCCount', 'LoansCount'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gyyN6ZdnMc-P"
+      },
+      "source": [
+        "dataset.to_csv('new_appdata10_1.csv', index=False)"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9aHMk0BfMdOn"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p47uabMzNNkh"
       },
       "source": [
         ""
